[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/weapons/weapon_pistol40cal.gd" type="Script" id=1]
[ext_resource path="res://textures/ui/Reticle.png" type="Texture" id=2]
[ext_resource path="res://audio/sfx/temporary/ouch.ogg" type="AudioStream" id=3]
[ext_resource path="res://textures/weapons/pistoltexture.png" type="Texture" id=4]
[ext_resource path="res://audio/sfx/temporary/jump_temp.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx/temporary/footsteps_temo.ogg" type="AudioStream" id=6]
[ext_resource path="res://models/view/pistol40cal.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Objects/Weapons/w40CalPistol.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/pmove.gd" type="Script" id=9]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 1.72, 0.5 )

[sub_resource type="Theme" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 4 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 9 )
RUN_SPEED = 12
JUMP_POWER = 16
GRAVITY = 40

[node name="BoundingBox" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0 )
fov = 90.0

[node name="Control" type="Control" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPSGAGUE" type="Label" parent="Camera/Control"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Speed: --METRES/SECOND"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_TEMP" type="Label" parent="Camera/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 163.0
margin_bottom = 7.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.121569, 0.156863, 0.137255, 1 )
text = "HP: 100"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Camera/Control"]
position = Vector2( 320, 240 )
texture = ExtResource( 2 )

[node name="Weapons" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, -0.5, -1.2 )

[node name="w40CalPistol" type="MeshInstance" parent="Camera/Weapons" instance=ExtResource( 8 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
layers = 524288
mesh = ExtResource( 7 )
material/0 = SubResource( 3 )
script = ExtResource( 1 )

[node name="walk_temp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="jump_temp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ouch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
